--- a/packages/zeitline/.babelrc
+++ b/packages/zeitline/.babelrc
@@ -1,3 +1,4 @@
 {
-  "plugins": ["transform-object-rest-spread"]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-transform-object-rest-spread"]
 }
